--- a/estilos.css
+++ b/estilos.css
@@ -1,2 +1,75 @@
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+/*ajeitando no geral*/
+.conteinertudo{
+    display: flex;
+    justify-content: center;
+}
+
+.tudo{
+    height: 1026px;
+    width: 414px;
+    background-color: #E5E5E5;
+}
+
+/*barra superior*/
+
+.titulao{
+    font-family: 'Righteous';
+    font-weight: 400;
+    font-size: 44px;
+    color: #FFFFFF;
+    margin-left: 21px;
+}
+
+.subtitulao{
+    font-family: 'Roboto';
+    font-weight: 400;
+    font-size: 18px;
+    color: #FFFFFF;
+    margin-left: 21px;
+    margin-top: 5px;
+}
+
+.barrasup{
+    display: flex;
+    align-items: center;
+    background-color: #CF2B2B;
+    width: 414px;
+    height: 92px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    position: fixed;
+    top: 0
+}
+
+.barrainf{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #FFFFFF;
+    width: 414px;
+    height: 92px;
+    position: fixed;
+    bottom: 0
+}
+
+.conteinerbarrainf{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    border-radius: 50px;
+    width: 364px;
+    height: 61px;
+    background-color: #CBCBCB;
+    
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    color: #FFFFFF;
+    text-align: center;
+
+
+}
