--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+*{
+    box-sizing: border-box
+}
+
 /*ajeitando no geral*/
 .conteinertudo{
     display: flex;
@@ -112,6 +116,9 @@
 .itens{
     display: flex;
     flex-direction: column;
+    border: 5px solid rgb(255, 255, 255);
+    padding-left: 9px;
+    padding-top: 13px;
     
     
     
@@ -130,49 +137,56 @@
     width: 144px;
     height: 87px;
     object-fit: cover;
-    position: absolute;
-    top: 18px;
-    left: 14px;
-    right: 14px;
+   
     border-radius: 4px;
+
 }
 
 .texto{
-    margin-left: 14px;
-    margin-top: 113px;
+    
     font-family: 'Roboto';
 }
 
 .nomeitem{
-    display: flex;
-    align-items: center;
+    
     font-size: 16px;
     font-weight: 700;
     color: #333333;
     height: 23px;
     width: 144px;
     margin-top: 8px;
+    display: flex;
+    
 }
 
 .descricaoitem{
-    display: flex;
-    align-items: center;
+    
     font-size: 15px;
     font-weight: 300;
     color: #a6a6a6;
-  
-    
-    height: 39px;
+    margin-top: 5px;
+    width: 144px; 
 }
 
 .precoitem{
-    display: flex;
-    align-items: center;
+    
     font-size: 16px;
     font-weight: 400;
     color: #000000;
     height: 19px;
+    margin-top: 17px;
 }
 
-/*fim do prato, agora são as bebidas*/
+/*js*/
+
+.verde{
+    border-radius: 9px;
+    border: 5px solid rgb(0, 238, 0);
+}
+
+.branco{
+    border-radius: 9px;
+    border: 5px solid rgb(255, 255, 255);
+}
+
 
