botão inferior ativado

--- a/estilos.css
+++ b/estilos.css
@@ -80,6 +80,24 @@
     text-align: center;
 }
 
+.finalizar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    border-radius: 50px;
+    width: 364px;
+    height: 61px;
+    background-color: #32B72F;
+    
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    color: #FFFFFF;
+    text-align: center;
+}
+
 /*categorias*/
 
 .prato{
@@ -205,5 +223,7 @@
     border-radius: 9px;
     border: 5px solid rgb(255, 255, 255);
 }
+
+
 
 
